<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/dashboard_selected"
        android:showAsAction="ifRoom"
        app:showAsAction="ifRoom"

        android:title="@string/title_dashboard"/>
    <item
        android:id="@+id/navigation_order"
        android:icon="@drawable/order_selected"
        android:showAsAction="ifRoom"
        app:showAsAction="ifRoom"

        android:title="@string/title_order"/>

    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/setting_selected"
        android:showAsAction="ifRoom"
        app:showAsAction="ifRoom"

        android:title="@string/title_setting"
        />
</menu>
