<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:ignore="MissingPrefix">

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scaleType="centerCrop"


        android:orientation="vertical"
        android:id="@+id/rlimage"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp">


        <ImageView
            android:id="@+id/imglogo"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="150dp"
            app:srcCompat="@drawable/ic_logo" />

        <TextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_title"
            android:textSize="14dp"
           fontPath="fonts/SourceSansPro-Regular.ttf"

        android:textColor="@color/white"
            android:layout_marginBottom="-15dp"
            android:layout_gravity="center"
            android:layout_alignBottom="@+id/imglogo"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/text_desc"
            fontPath="fonts/SourceSansPro-Regular.ttf"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_desc"
            android:textColor="@color/white"
            android:layout_marginBottom="-30dp"
            android:layout_gravity="center"
            android:textSize="14dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

    </FrameLayout>


    <Button
        android:id="@+id/btn_next"
        fontPath="fonts/SourceSansPro-Regular.ttf"

        android:layout_width="286dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"

        android:layout_marginBottom="66dp"
        android:background="@drawable/custom_button_round_rect_next"
        android:text="@string/start"
        android:textColor="@color/white" />



</RelativeLayout>